donderdag met astrid

--- a/the-basic-idea.tex
+++ b/the-basic-idea.tex
@@ -72,8 +72,8 @@ To see what a light-headed relative looks like, consider the Old High German lig
 The difference between a light-headed relative and a headless relative is that in a headless relative either the light head or the relative pronoun does not surface.
 The surfacing element is the one that bears the winning case, and the absent element is the one that bears the losing case. This means that what I have so far been glossing as the relative pronoun and calling the relative pronoun is actually sometimes the light head (when the relative pronoun is deleted) and sometimes the relative pronoun (when the light head is deleted). To reflect that, I call the surfacing element from now on the surface pronoun.
 
-This brings me to my second assumption, which concerns the circumstances under which the light head or the relative pronoun can be deleted. A light head or a relative pronoun can be deleted when its content can be recovered. The content can be recovered when there is an antecedent which contains the deleted element.
-For light heads and relative pronouns this means that one of them can be absent when it forms a constituent within the other element.\footnote{In Section \ref{sec:three-types} I show constituent containment is also a necessary requirement in other types of deletion operations.}
+This brings me to my second assumption, which concerns the circumstances under which the light head or the relative pronoun can be deleted. A light head or a relative pronoun can be deleted when its content can be recovered. The content can be recovered when there is an antecedent which contains the deleted element. %this containment can either be structural, or phonological, so
+For light heads and relative pronouns this means that one of them can be absent when it forms (or is syncretic with) a constituent within the other element.\footnote{In Section \ref{sec:three-types} I show constituent containment is also a necessary requirement in other types of deletion operations.}
 In other words, it depends on the comparison between the light head and the relative pronoun which one of them is absent. Specifically, it depends on the comparison of the constituents that the two elements consist of. Note that it is also possible that neither of the elements form a constituent within the other one. The consequence is then that neither of them is deleted, which describes the situation in which there is no grammatical headless relative.
 
 In order to be able to compare the light head and the relative pronoun, I zoom in on their syntactic structures. In Chapter \ref{ch:deriving-onlyinternal} to \ref{ch:discussing-unrestricted} I give arguments to support the structures I am assuming here. Figure \ref{fig:rel-lh-intonly} gives a simplified representation of them.
@@ -109,6 +109,7 @@ In order to be able to compare the light head and the relative pronoun, I zoom i
 I assume that the light head and the relative pronoun partly contain the same syntactic features. The features they have in common are case features (\tsc{k}) and what I here simplify as phi-features (ϕ). The light head and the relative pronoun differ from each other in that the relative pronoun has at least one feature in addition, which I call here \tsc{rel}.
 
 This system excludes the external-only type. An external-only type would be one in which the relative pronoun can be deleted, but the light head cannot be deleted. In my proposal, an element can be deleted if forms a constituent within the other element. Relative pronouns always contain one more feature than light heads: \tsc{rel}. From that it follows that the light head does not contain all features that the relative pronoun contains. Therefore, it is impossible for a relative pronoun to form a constituent within the light head.%too strong, effect of syncretism
+%this syncretism means that the other way around also always works
 
 My last assumption makes crucial use of Nanosyntax. I assume that the only way in which languages differ is in their lexicon: different languages contain different lexical entries. In Nanosyntax, lexical entries have the form of constitutions, as those are the only objects that can be spelled out. This means that languages differ in how they organize their features into constituents. This has consequences for the deletion of light heads and relative pronouns, since they need to be contained in the other the be deleted. For light heads and relative pronouns the crucial difference is whether phi-features are case features are each spelled out by their own lexical entry or whether they form a portmanteau.
 
@@ -326,7 +327,7 @@ The \tsc{nom}P of the light head forms a constituent within the relative pronoun
 The \tsc{nom}P of the relative pronoun forms a constituent within the relative pronoun, but the light head does not contain the feature \tsc{rel} that forms a \tsc{rel}P.
 As a result, none of the elements can be absent. I illustrate this by leaving the content of both dashed circles unfilled.
 
-These comparisons correctly the derive the observed patterns in internal-only languages. Headless relatives in internal-only languages are grammatical when the internal and the external case match and when the internal case is more complex than the external case. They are ungrammatical when the external case is more complex than the internal case. That means that the light head can be deleted, but the relative pronoun cannot be deleted. I summarize this in \ref{tbl:overview-rel-light-mg}.
+These comparisons correctly the derive the observed patterns in internal-only languages. An overview of the patterns is shown in Table \ref{tbl:overview-rel-light-mg}.
 
 \begin{table}[htbp]
   \center
@@ -342,6 +343,8 @@ These comparisons correctly the derive the observed patterns in internal-only la
 \end{tabular}
 \label{tbl:overview-rel-light-mg}
 \end{table}
+
+Headless relatives in internal-only languages are grammatical when the internal and the external case match and when the internal case is more complex than the external case. In these situations, the light head forms a constituent within the relative pronoun, and the light head is deleted. Headless relatives are ungrammatical when the external case is more complex than the internal case, because then the light head no longer forms a constituent within the relative pronoun.
 
 
 \subsection{The matching type}
@@ -386,7 +389,7 @@ I continue with the matching type of language. In this type of language, the con
   \label{fig:rel-lh-matching}
 \end{figure}
 
-Like in the internal-only type of language, the \tsc{rel}P has its own spellout and is merged as a prefix. The difference between the two language types lies in how the ϕP and the \tsc{k}P are spelled out. In the matching type of language, the ϕP and the \tsc{k}P both have their own spellout. As a result, the ϕP is moved over the \tsc{k}P (allowing the \tsc{k}P to form a constituent on its own, as only constituents can be spelled out). This crucially differs from the internal-only type of language, in which \tsc{k}P and ϕP are spelled out a by a single morpheme and no movement is taking place. In this section I show how this difference leads to different deletion possibilities and, therefore, to different grammaticality patterns. In Chapter \ref{ch:deriving-matching}, I motivate this analysis I put forward for the matching type of language.
+Like in the internal-only type of language, the \tsc{rel}P has its own spellout and is merged as a prefix. The difference between the two language types lies in how the ϕP and the \tsc{k}P are spelled out. In the matching type of language, the ϕP and the \tsc{k}P both correspond to a morpheme, which means that they both form separate constituents. As a result, the ϕP is moved over the \tsc{k}P (allowing the \tsc{k}P to form a constituent on its own, as only constituents can be spelled out). This crucially differs from the internal-only type of language, in which \tsc{k}P and ϕP are spelled out a by a single morpheme and no movement is taking place. In this section I show how this difference leads to different deletion possibilities and, therefore, to different grammaticality patterns. In Chapter \ref{ch:deriving-matching}, I motivate this analysis I put forward for the matching type of language.
 
 In Figure \ref{fig:nom-nom-matching}, I give an example in which the light head and the relative pronoun bear the same case.
 
@@ -586,7 +589,7 @@ In \ref{ex:dutch-houses}, I give an example of a conjunction with two noun phras
  these white houses and those\\
  `these white houses and those white houses' \flushfill{Dutch}\label{ex:dutch-houses}
 
-The adjective \tit{witte} `white' forms a constituent with \tit{huizen} `houses'. I show this in Figure \ref{fig:dutch-houses} under first conjunct. In the second conjunct, the constituent with the adjective and the noun in it is deleted. The adjective can still be interpreted in \ref{ex:dutch-houses}, because it forms a constituent with the noun.
+In Figure \ref{fig:dutch-houses}, I schematically show the first and second conjunct of \ref{ex:dutch-houses}.
 
  \begin{figure}[htbp]
    \center
@@ -632,6 +635,8 @@ The adjective \tit{witte} `white' forms a constituent with \tit{huizen} `houses'
    \label{fig:dutch-houses}
  \end{figure}
 
+The YP in the second conjunct is the constituent that is deleted. I drew a dashed circle around it, and I marked the content gray. This YP contains the adjective and the noun. The interpretation of the YP in the second conjunct can be recovered, because the YP in the first conjunct served as the antecedent. What is crucial here is that the deleted material forms a single constituent, and that is why it can be recovered.
+
 The situation is different in Kipsigis, a Nilotic Kalenjin language spoken in Kenya. In \ref{ex:kipsigis-houses}, I give an example of a conjunction of two noun phrases in Kipsigis. The first conjunct consists of a noun, a demonstrative and an adjective, and the second one only of a demonstrative \citep{cinqueforthcoming}.
 
 \exg. kaarii-chuun leel-ach ak chu\\
@@ -639,9 +644,51 @@ houses-those white-\tsc{pl} and these\\
 `those white houses and these houses'\\
 not: `those white houses and these white houses'\label{ex:kipsigis-houses} \flushfill{Kipsigis, \pgcitealt{cinqueforthcoming}{24}}
 
-The adjective \tit{leel} `white' does not forms a constituent with \tit{kaarii} `houses'. I show this in Figure \ref{fig:kipsigis-houses} under first conjunct. In the second conjunct, the adjective and the noun are deleted. Different from the Dutch example in \ref{fig:dutch-houses}, this is not a single constituent. The adjective cannot be interpreted in \ref{ex:kipsigis-houses}, because it does not form a constituent with the noun.
+The order between the noun, the demonstrative and the adjective indicates that the NP must have moved (probably cyclically via YP) to the specifier of WP. I show this in \ref{ex:np-dem-adj-kipsigis}.
 
-%this tree cannot be derived..
+\ex.\label{ex:np-dem-adj-kipsigis}
+\begin{forest} boom
+  [WP
+      [NP
+          [kaarii,name=tgt2]
+      ]
+      [WP
+          [DemP
+              [chuun]
+          ]
+          [YP
+              [\sout{NP},
+               tikz={
+               \node[
+               draw,circle,
+               scale=0.8,
+               fit to=tree]{};
+               }
+                  [kaarii, name=tgt1]
+              ]
+              [YP
+                  [AP
+                      [leel]
+                  ]
+                  [\sout{NP},
+                   tikz={
+                   \node[
+                   draw,circle,
+                   scale=0.8,
+                   fit to=tree]{};
+                   }
+                      [kaarii, name=src]
+                  ]
+              ]
+          ]
+      ]
+  ]
+  \draw[->,dashed] (src) to[out=south west,in=south] (tgt1);
+  \draw[->,dashed] (tgt1) to[out=south west,in=south] (tgt2);
+\end{forest}
+
+In Figure \ref{fig:kipsigis-houses}, I schematically show the first and second conjunct of \ref{ex:kipsigis-houses}.
+
 \begin{figure}[htbp]
   \center
   \begin{tabular}[b]{ccc}
@@ -705,81 +752,13 @@ The adjective \tit{leel} `white' does not forms a constituent with \tit{kaarii} 
    \label{fig:kipsigis-houses}
 \end{figure}
 
+Different from in the Dutch example, the adjective and the noun that are deleted in the second conjunct of \ref{ex:kipsigis-houses} do not form a constituent. I draw a dashed circle about the deleted elements and their antecedents in Figure \ref{fig:kipsigis-houses}. Since the adjective and the noun do not form a single constituent together, they cannot be interpreted in the second conjunct of \ref{ex:kipsigis-houses}. Instead, only the noun can be recovered.
+
 This observation regarding NP ellipsis provides independent evidence for my assumption that constituent containment is the crucial requirement for deletion of the light head or the relative pronoun in headless relatives.
 
-For completeness, I give an example in which the light head bears a more complex case than the relative pronoun in Figure \ref{fig:acc-nom-matching}.
+I do not give an example in which the light head bears a more complex case than the relative pronoun. The reasoning here is the same as for the internal-only type: both the light head and the relative pronoun contain a feature that the other element does not contain. Since the weaker requirement of feature containment is not met, the stronger requirement of constituent containment cannot be met either.
 
-\begin{figure}[htbp]
-  \center
-  \begin{tabular}[b]{ccc}
-    \toprule
-    light head & & relative pronoun \\
-    \cmidrule(lr){1-1} \cmidrule(lr){3-3}
-    \begin{forest} boom
-      [\tsc{acc}P
-          [ϕP,
-          tikz={
-          \node[draw,circle,
-          dashed,
-          scale=0.85,
-          fit to=tree]{};
-          }
-              [\phantom{xxx}, roof]
-          ]
-          [\tsc{acc}P
-              [\tsc{f}2]
-              [\tsc{nom}P,
-              tikz={
-              \node[draw,circle,
-              dashed,
-              scale=0.85,
-              fit to=tree]{};
-              }
-                  [\tsc{f}1, baseline]
-              ]
-          ]
-      ]
-    \end{forest}
-    & \phantom{x} &
-    \begin{forest} boom
-      [\tsc{rel}P
-          [\tsc{rel}P
-              [\phantom{xxx}, roof, baseline]
-          ]
-          [\tsc{nom}P, s sep=15mm
-              [ϕP,
-              tikz={
-              \node[draw,circle,
-              dashed,
-              scale=0.85,
-              fit to=tree]{};
-              }
-                  [\phantom{xxx}, roof]
-              ]
-              [\tsc{nom}P,
-              tikz={
-              \node[draw,circle,
-              dashed,
-              scale=0.85,
-              fit to=tree]{};
-              }
-                  [\tsc{f}1, baseline]
-              ]
-          ]
-      ]
-    \end{forest}\\
-    \bottomrule
-  \end{tabular}
-  \caption {\tsc{ext}\scsub{acc} vs. \tsc{int}\scsub{nom} in the matching type}
- \label{fig:acc-nom-matching}
-\end{figure}
-
-I draw a dashed circle around each constituent that is a constituent in both the light head and the relative pronoun.
-Neither the light head nor the relative pronoun forms a constituent within the other element. It is even the case that both contain features that the other one does not contain.
-The relative pronoun cannot delete the light head, which I illustrate by leaving the content of both dashed circles unfilled.
-
-The comparisons between the constituents within the light heads and the relative pronouns correctly derive the patterns observed in the matching type of language.
-In matching languages, headless relatives are only grammatical when the internal and the external case match. When one of them is more complex than the other one, there is no longer a grammatical outcome possible. I summarize this in \ref{tbl:overview-rel-light-pol}.
+The comparisons between the constituents within the light heads and the relative pronouns correctly derive the patterns observed in the matching type of language. An overview of the patterns is shown in Table \ref{tbl:overview-rel-light-pol}.
 
 \begin{table}[htbp]
   \center
@@ -796,6 +775,7 @@ In matching languages, headless relatives are only grammatical when the internal
 \label{tbl:overview-rel-light-pol}
 \end{table}
 
+In matching languages, headless relatives are only grammatical when the internal and the external case match. When one of them is more complex than the other one, there is no longer a grammatical outcome possible. This follows from the fact that in matching languages ϕP and \tsc{k}P both both correspond to a morpheme, which means that they both form separate constituents. As a result, the light head only forms a constituent within the relative pronoun when the internal and external case match. When the internal and external case differ, neither of the two forms is contained in the other one.
 
 
 
@@ -840,8 +820,45 @@ I end with the unrestricted type of language. In this type of language, the cons
 
 The \tsc{k}P is spelled out a whole, including the ϕP. The \tsc{rel}P has its own spellout and is merged as a prefix to the \tsc{k}P. Chapter \ref{ch:deriving-unrestricted} motivates this analysis.
 
+so for the first two, see up there
 
-In Figure \ref{fig:nom-nom-unres}, I give an example in which the relative pronoun and the light head bear the same case.
+The difference between the internal-only type and the unrestricted type lies in when the external case is more complex than the internal case. In the internal-only type this is ungrammatical, and in the unrestricted type, it is grammatical. This means that the light head can delete the relative pronoun when its case is more complex. This is because of a syncretism.
+
+\footnote{
+Another option is that the relative pronoun does not actually form a constituent within the light head. Instead, the relative features form a separate constituent which is not deleted. In this chapter I only discuss the situation in which the relative pronoun as a whole forms a constituent within the light head, and the relative pronoun is deleted as a whole. I return to the deletion of separate constituents in Chapter \ref{ch:discussing-unrestricted}.
+
+give a tree here that illustrates it
+
+}
+
+(2) cyclicity
+
+
+
+I suggest that there is a syncretism between the phi-features and the phi-features plus the relative features. That is, there is a lexical entry for the \tsc{rel}P which contains the feature \tsc{rel} and feature ϕ, but not a more specific one that spells out ϕ on its own. In \ref{ex:entry-alpha}, I give the lexical entry, which spells out as /α/.
+
+\ex.\label{ex:entry-alpha}
+\begin{forest} boom
+  [\tsc{rel}P
+      [\tsc{rel}P
+          [\phantom{xxx}, roof, baseline]
+      ]
+      [\tsc{k}P
+          [\tsc{k}]
+          [ϕP
+              [\phantom{xxx}, roof, baseline]
+          ]
+      ]
+  ]
+  {\draw (.east) node[right]{⇔ \tit{α}}; }
+\end{forest}
+
+
+
+
+
+
+so there is a stage in the derivation in which the light head is nominative and so is the relative pronoun
 
 \begin{figure}[htbp]
   \center
@@ -850,28 +867,12 @@ In Figure \ref{fig:nom-nom-unres}, I give an example in which the relative prono
       light head & & relative pronoun \\
       \cmidrule(lr){1-1} \cmidrule(lr){3-3}
       \begin{forest} boom
-        [\tsc{nom}P,
-        tikz={
-        \node[draw,circle,
-        dashed,
-        scale=0.85,
-        fill=DG,fill opacity=0.2,
-        fit to=tree]{};
-        }
-            [\tsc{f}1]
-            [ϕP
-                [\phantom{xxx}, roof, baseline]
-            ]
-        ]
-      \end{forest}
-      & \phantom{x} &
-      \begin{forest} boom
-        [\tsc{rel}P
-            [\tsc{rel}P
-                [\phantom{xxx}, roof, baseline]
-            ]
             [\tsc{nom}P,
             tikz={
+            \node[label=below:\tit{α},
+            draw,circle,
+            scale=0.8,
+            fit to=tree]{};
             \node[draw,circle,
             dashed,
             scale=0.85,
@@ -883,70 +884,48 @@ In Figure \ref{fig:nom-nom-unres}, I give an example in which the relative prono
                 ]
             ]
         ]
+      \end{forest}
+      & \phantom{x} &
+      \begin{forest} boom
+        [\tsc{rel}P,
+        tikz={
+        \node[label=below:\tit{α},
+        draw,circle,
+        scale=0.85,
+        fill=DG,fill opacity=0.2,
+        fit to=tree]{};
+        \node[draw,circle,
+        dashed,
+        scale=0.9,
+        fit to=tree]{};
+        }
+            [\tsc{rel}P
+                [\phantom{xxx}, roof, baseline]
+            ]
+            [\tsc{nom}P
+                [\tsc{f}1]
+                [ϕP
+                    [\phantom{xxx}, roof, baseline]
+                ]
+            ]
+        ]
       \end{forest}\\
       \bottomrule
   \end{tabular}
    \caption {\tsc{ext}\scsub{nom} vs. \tsc{int}\scsub{nom} in the unrestricted type}
-  \label{fig:nom-nom-unres}
+  \label{fig:acc-nom-intonly}
 \end{figure}
 
-I draw a dashed circle around each constituent that is a constituent in both the light head and the relative pronoun.
-The light head (the \tsc{nom}P) forms a constituent within the relative pronoun (the \tsc{rel}P), so the light head can be deleted. I illustrate this by marking the content of the dashed circles for the light head gray.
 
-In Figure \ref{fig:nom-acc-intonly}, I give an example in which the relative pronoun bears a more complex case than the light head.
 
-\begin{figure}[htbp]
-  \center
-  \begin{tabular}[b]{ccc}
-      \toprule
-      light head & & relative pronoun \\
-      \cmidrule(lr){1-1} \cmidrule(lr){3-3}
-      \begin{forest} boom
-        [\tsc{nom}P,
-        tikz={
-        \node[draw,circle,
-        dashed,
-        scale=0.85,
-        fill=DG,fill opacity=0.2,
-        fit to=tree]{};
-        }
-            [\tsc{f}1]
-            [ϕP
-                [\phantom{xxx}, roof, baseline]
-            ]
-        ]
-      \end{forest}
-      & \phantom{x} &
-      \begin{forest} boom
-        [\tsc{rel}P
-            [\tsc{rel}P
-                [\phantom{xxx}, roof, baseline]
-            ]
-            [\tsc{acc}P
-                [\tsc{f}2]
-                [\tsc{nom}P,
-                tikz={
-                \node[draw,circle,
-                dashed,
-                scale=0.85,
-                fit to=tree]{};
-                }
-                    [\tsc{f}1]
-                    [ϕP
-                        [\phantom{xxx}, roof, baseline]
-                    ]
-                ]
-            ]
-        ]
-      \end{forest}\\
-      \bottomrule
-  \end{tabular}
-   \caption {\tsc{ext}\scsub{nom} vs. \tsc{int}\scsub{acc} in the unrestricted type}
-  \label{fig:nom-acc-unres}
-\end{figure}
-
-I draw a dashed circle around each constituent that is a constituent in both the light head and the relative pronoun.
-The light head (the \tsc{nom}P) still forms a constituent within the relative pronoun (the \tsc{rel}P), so the light head can be deleted. I illustrate this by marking the content of the dashed circles for the light head gray.
+% The ϕP in the light head corresponds to \tit{α}, illustrated by the circle around the ϕP and the \tit{α} under it. The \tsc{rel}P in the relative pronoun corresponds to \tit{α} too, illustrated in the same way.
+% The light head (the \tsc{nom}P) consists of the feature \tsc{f}1 and a constituent that corresponds to \tit{α}. This constituent, a \tsc{nom}P that consists of the feature \tsc{f}1 and a constituent that corresponds to \tit{α} is contained in the relative pronoun (the \tsc{acc}P).
+% I illustrate this by drawing a dashed circle around each constituent that is a constituent in both the light head and the relative pronoun and by marking the content of the dashed circles for the light head gray.
+%
+% The ϕP in the light head corresponds to \tit{α}, illustrated by the circle around the ϕP and the \tit{α} under it. The \tsc{rel}P in the relative pronoun corresponds to \tit{α} too, illustrated in the same way.
+% The relative pronoun (the \tsc{nom}P) consists of the feature \tsc{f}1 and a constituent that corresponds to \tit{α}. This constituent, a \tsc{nom}P that consists of the feature \tsc{f}1 and a constituent that corresponds to \tit{α} is contained in the relative pronoun (the \tsc{acc}P).
+% I illustrate this by drawing a dashed circle around each constituent that is a constituent in both the light head and the relative pronoun and by marking the content of the dashed circles for the relative pronoun gray.
+% This means that a light head can delete a relative pronoun when there is a syncretic form between the two, even though the light head lacks the feature \tsc{rel} that the relative pronoun contains.
 
 
 
@@ -955,224 +934,9 @@ The light head (the \tsc{nom}P) still forms a constituent within the relative pr
 
 
 
+%%%%%%%
 
-The difference between the internal-only type and the unrestricted type lies in when the external case is more complex than the internal case. In the internal-only type this is ungrammatical, and in the unrestricted type, it is grammatical. This means that the light head can delete the relative pronoun when its case is more complex. I show overview of the language in \ref{tbl:overview-rel-light-ohg}.
-
-
-
-
-\footnote{
-Another option is that the relative pronoun does not actually form a constituent within the light head. Instead, the relative features form a separate constituent which is not deleted. In this chapter I only discuss the situation in which the relative pronoun as a whole forms a constituent within the light head, and the relative pronoun is deleted as a whole. I return to the deletion of separate constituents in Chapter \ref{ch:discussing-unrestricted}.
-}
-
-
-
-
-This brings me to the second change: syncretism. I suggest that there is a syncretism between the phi-features and the phi-features plus the relative features. That is, there is a lexical entry for the \tsc{rel}P which contains the feature \tsc{rel} and feature ϕ, but not a more specific one that spells out ϕ on its own. In \ref{ex:entry-alpha}, I give the lexical entry, which spells out as /α/.
-
-\ex.\label{ex:entry-alpha}
-\begin{forest} boom
-  [\tsc{rel}P
-      [\tsc{rel}]
-      [ϕP
-          [ϕ]
-      ]
-  ]
-  {\draw (.east) node[right]{⇔ \tit{α}}; }
-\end{forest}
-
-In Figure \ref{fig:rel-lh-unrest-syn}, I added the syncretism to the structures.
-
-\begin{figure}[htbp]
-  \center
-  \begin{tabular}[b]{ccc}
-      \toprule
-      light head & & relative pronoun \\
-      \cmidrule(lr){1-1} \cmidrule(lr){3-3}
-      \begin{forest} boom
-      [\tsc{k}P,
-          [\tsc{k}]
-          [ϕP,
-          tikz={
-          \node[label=below:\tit{α},
-          draw,circle,
-          scale=0.8,
-          fit to=tree]{};
-          }
-              [ϕ, baseline]
-          ]
-      ]
-      \end{forest}
-      & \phantom{x} &
-    \begin{forest} boom
-      [\tsc{k}P
-          [\tsc{k}]
-          [\tsc{rel}P,
-          tikz={
-          \node[label=below:\tit{α},
-          draw,circle,
-          scale=0.85,
-          fit to=tree]{};
-          }
-              [\tsc{rel}]
-              [ϕP
-                  [ϕ, baseline]
-              ]
-          ]
-      ]
-    \end{forest}\\
-      \bottomrule
-  \end{tabular}
-   \caption {\tsc{lh} and \tsc{rp} in the unrestricted type}
-  \label{fig:rel-lh-unrest-syn}
-\end{figure}
-
-There are two ways of looking at the structures in Figure \ref{fig:rel-lh-unrest-syn}.
-Looking only at the features, the light head is a \tsc{k}P which contains the feature \tsc{k} and the ϕP.
-Similarly, the relative pronoun is a \tsc{k}P which contains the feature \tsc{k} and the \tsc{rel}P which contains the feature \tsc{rel} and the ϕP.
-From this perspective, the light head and the relative pronoun differ.
-
-Looking also at the constituents that are formed within the structure, the light head and the relative pronoun are the same.
-The light head is a \tsc{k}P that contains the feature \tsc{k} and the constituent that corresponds to \tit{α}.
-The relative pronoun is also a \tsc{k}P that contains the feature \tsc{k} and the constituent that corresponds to \tit{α}.
-Syncretism has the effect that it `overwrites' syntactic structure.
-
-I suggest that these structures are the ones that generate the unrestricted type. However, these are not the structures found in Old High German. In Chapter \ref{ch:discussing-unrestricted} I discuss how Old High German differs from the image I sketched here.
-
-In this section, I show how the structures in Figure \ref{fig:rel-lh-unrest-syn} derive the unrestricted pattern. I show how the relative pronoun can still delete the light head when the internal case is more complex and how the light head can delete the relative pronoun when the external case is more complex.
-
-In Figure \ref{fig:nom-acc-unrest}, I give an example in which the relative pronoun bears a more complex case than the light head.
-
-\begin{figure}[htbp]
-  \center
-  \begin{tabular}[b]{ccc}
-      \toprule
-      light head & & relative pronoun \\
-      \cmidrule(lr){1-1} \cmidrule(lr){3-3}
-      \begin{forest} boom
-        [\tsc{nom}P,
-        tikz={
-        \node[draw,circle,
-        dashed,
-        scale=0.9,
-        fill=DG,fill opacity=0.2,
-        fit to=tree]{};
-        }
-            [\tsc{f}1]
-            [ϕP,
-            tikz={
-            \node[label=below:\tit{α},
-            draw,circle,
-            scale=0.8,
-            fit to=tree]{};
-            }
-                [ϕ, baseline]
-            ]
-        ]
-      \end{forest}
-      & \phantom{x} &
-      \begin{forest} boom
-        [\tsc{acc}P
-            [\tsc{f}2]
-            [\tsc{nom}P,
-            tikz={
-            \node[draw,circle,
-            dashed,
-            scale=0.85,
-            fit to=tree]{};
-            }
-                [\tsc{f}1]
-                [\tsc{rel}P,
-                tikz={
-                \node[label=below:\tit{α},
-                draw,circle,
-                scale=0.8,
-                fit to=tree]{};
-                }
-                    [\tsc{rel}]
-                    [ϕP, baseline]
-                ]
-            ]
-        ]
-      \end{forest}\\
-      \bottomrule
-  \end{tabular}
-   \caption {\tsc{ext}\scsub{nom} vs. \tsc{int}\scsub{acc} in the unrestricted type}
-  \label{fig:nom-acc-unrest}
-\end{figure}
-
-The ϕP in the light head corresponds to \tit{α}, illustrated by the circle around the ϕP and the \tit{α} under it. The \tsc{rel}P in the relative pronoun corresponds to \tit{α} too, illustrated in the same way.
-The light head (the \tsc{nom}P) consists of the feature \tsc{f}1 and a constituent that corresponds to \tit{α}. This constituent, a \tsc{nom}P that consists of the feature \tsc{f}1 and a constituent that corresponds to \tit{α} is contained in the relative pronoun (the \tsc{acc}P).
-I illustrate this by drawing a dashed circle around each constituent that is a constituent in both the light head and the relative pronoun and by marking the content of the dashed circles for the light head gray.
-
-In Figure \ref{fig:acc-nom-unrest}, I give an example in which the light head bears a more complex case than the relative pronoun.
-
-\begin{figure}[htbp]
-  \center
-  \begin{tabular}[b]{ccc}
-      \toprule
-      light head & & relative pronoun \\
-      \cmidrule(lr){1-1} \cmidrule(lr){3-3}
-      \begin{forest} boom
-        [\tsc{acc}P
-            [\tsc{f}2]
-            [\tsc{nom}P,
-            tikz={
-            \node[draw,circle,
-            dashed,
-            scale=0.9,
-            fit to=tree]{};
-            }
-                [\tsc{f}1]
-                [ϕP,
-                tikz={
-                \node[label=below:\tit{α},
-                draw,circle,
-                scale=0.8,
-                fit to=tree]{};
-                }
-                    [ϕ, baseline]
-                ]
-            ]
-        ]
-      \end{forest}
-      & \phantom{x} &
-      \begin{forest} boom
-        [\tsc{nom}P,
-        tikz={
-        \node[draw,circle,
-        dashed,
-        scale=0.9,
-        fill=DG,fill opacity=0.2,
-        fit to=tree]{};
-        }
-            [\tsc{f}1]
-            [\tsc{rel}P,
-            tikz={
-            \node[label=below:\tit{α},
-            draw,circle,
-            scale=0.85,
-            fit to=tree]{};
-            }
-                [\tsc{rel}]
-                [ϕP
-                    [ϕ, baseline]
-                ]
-            ]
-        ]
-      \end{forest}\\
-      \bottomrule
-  \end{tabular}
-   \caption {\tsc{ext}\scsub{acc} vs. \tsc{int}\scsub{nom} in the unrestricted type}
-  \label{fig:acc-nom-unrest}
-\end{figure}
-
-The ϕP in the light head corresponds to \tit{α}, illustrated by the circle around the ϕP and the \tit{α} under it. The \tsc{rel}P in the relative pronoun corresponds to \tit{α} too, illustrated in the same way.
-The relative pronoun (the \tsc{nom}P) consists of the feature \tsc{f}1 and a constituent that corresponds to \tit{α}. This constituent, a \tsc{nom}P that consists of the feature \tsc{f}1 and a constituent that corresponds to \tit{α} is contained in the relative pronoun (the \tsc{acc}P).
-I illustrate this by drawing a dashed circle around each constituent that is a constituent in both the light head and the relative pronoun and by marking the content of the dashed circles for the relative pronoun gray.
-This means that a light head can delete a relative pronoun when there is a syncretic form between the two, even though the light head lacks the feature \tsc{rel} that the relative pronoun contains.
-
-The fact that syncretism licenses deletion is not specific to the portion of the structure that corresponds to the \tsc{rel}P that contains the ϕP. Syncretism between different cases have the same effect. I illustrate this with an example from Modern German.
+The fact that syncretism licenses deletion is not specific to the syncretism between \tsc{rel}P and ϕP. Syncretism between different cases has the same effect. I illustrate this with an example from Modern German.
 
 Consider the example in \ref{ex:mg-syn}, in which the internal nominative case competes against the external accusative case. The relative clause is marked in bold.
 The internal case is nominative, as the predicate \tit{gefällen} `to please' takes nominative subjects.
@@ -1192,7 +956,7 @@ There is a syncretism between the nominative and the accusative. That is, there 
       [\tsc{nom}P
           [\tsc{f}1]
           [ϕP
-              [ϕ]
+              [\phantom{xxx}, roof]
           ]
       ]
   ]
@@ -1224,7 +988,7 @@ In Figure \ref{fig:acc-nom-syn}, I give an example in which the light head bears
             [\tsc{nom}P
                 [\tsc{f}1]
                 [ϕP
-                    [ϕ, baseline]
+                    [\phantom{xxx}, roof, baseline]
                 ]
             ]
         ]
@@ -1233,7 +997,7 @@ In Figure \ref{fig:acc-nom-syn}, I give an example in which the light head bears
       \begin{forest} boom
         [\tsc{rel}P
             [\tsc{rel}P
-                [\phantom{xxx}, roof, baseline]
+                [\phantom{xxx}, roof]
             ]
             [\tsc{nom}P,
             tikz={
@@ -1248,7 +1012,7 @@ In Figure \ref{fig:acc-nom-syn}, I give an example in which the light head bears
             }
                 [\tsc{f}1]
                 [ϕP
-                    [ϕ, baseline]
+                    [\phantom{xxx}, roof, baseline]
                 ]
             ]
         ]
@@ -1287,11 +1051,18 @@ In unrestricted languages, all types of headless relatives are grammatical: when
 \end{table}
 
 
+
+
+
+
+
 \section{Summary}
 
 In summing up this chapter, I return to the metaphor with the committee that I introduced in Chapter \ref{ch:typology}. I wrote that first case competition takes place, in which a more complex case wins over a less complex case. This case competition can now be reformulated into a more general mechanism, namely constituent comparison. A more complex case corresponds to a constituent that contains the constituent of a less complex case.
 
-Subsequently, I noted that there is a committee that can either approve the winning case or not approve it. In Chapter \ref{ch:typology} I wrote that the approval happens based on where the winning case comes from: from inside of the relative clause (internal) or from outside of the relative clause (external). I argued in this chapter that headless relatives are derived from light-headed relatives. The light head bears that external case and the relative pronoun bears the internal case. The `approval' of an internal or external case relies on the same mechanism as case competition, namely constituent comparison. If the light head forms a constituent within the relative pronoun, the relative pronoun can delete the light head. The light head with its external case is absent, and the relative pronoun with its internal case surfaces. This is what corresponds to the the internal case `being allowed to surface'. If the relative pronoun forms a constituent within the light head, the light head can delete the relative pronoun. The relative pronoun with its internal case is absent, and the light head with its external case surfaces. This is what corresponds to the the external case `being allowed to surface'.
+Subsequently, I noted that there is a committee that can either approve the winning case or not approve it. In Chapter \ref{ch:typology} I wrote that the approval happens based on where the winning case comes from: from inside of the relative clause (internal) or from outside of the relative clause (external). I argued in this chapter that headless relatives are derived from light-headed relatives. The light head bears that external case and the relative pronoun bears the internal case. The `approval' of an internal or external case relies on the same mechanism as case competition, namely constituent comparison.
+If the light head forms (or is syncretic with) a constituent within the relative pronoun, the relative pronoun can delete the light head. The light head with its external case is absent, and the relative pronoun with its internal case surfaces. This is what corresponds to the the internal case `being allowed to surface'.
+If the relative pronoun is syncretic with a constituent within the light head, the light head can delete the relative pronoun. The relative pronoun with its internal case is absent, and the light head with its external case surfaces. This is what corresponds to the the external case `being allowed to surface'.
 
 In other words, the grammaticality of a headless relative depends on constituent comparison. The constituents that are compared are those of the light head and the relative pronoun, which both bear their own case. Case is special in that it can differ from sentence to sentence within a language. Therefore, the grammaticality of a sentence can differ within a language depending on the internal and external case. The part of the light head and relative pronoun that does not involve case features is stable within a language. Therefore, whether the internal or external case is `allowed to surface' does not differ within a language.
 
