--- a/the-basic-idea.tex
+++ b/the-basic-idea.tex
@@ -72,10 +72,18 @@ To see what a light-headed relative looks like, consider the Old High German lig
 The difference between a light-headed relative and a headless relative is that in a headless relative either the light head or the relative pronoun does not surface.
 The surfacing element is the one that bears the winning case, and the absent element is the one that bears the losing case. This means that what I have so far been glossing as the relative pronoun and calling the relative pronoun is actually sometimes the light head (when the relative pronoun is deleted) and sometimes the relative pronoun (when the light head is deleted). To reflect that, I call the surfacing element from now on the surface pronoun.
 
-This brings me to my second assumption, which concerns the circumstances under which the light head or the relative pronoun can be deleted. A light head or a relative pronoun can be deleted when its content can be recovered. The content can be recovered when there is an antecedent which contains the deleted element. %this containment can either be structural, or phonological, so
-For light heads and relative pronouns this means that one of them can be absent when it forms (or is syncretic with) a constituent within the other element.\footnote{In Section \ref{sec:three-types} I show constituent containment is also a necessary requirement in other types of deletion operations.}
+This brings me to my second assumption, which concerns the circumstances under which the light head or the relative pronoun can be deleted. A light head or a relative pronoun can be deleted when its content can be recovered. The content can be recovered when there is an antecedent which contains the deleted element. More specifically, the deleted element needs to form a single constituent within the antecedent.\footnote{
+In Section \ref{sec:basic-matching} I show that constituent containment is also a necessary requirement is other types of deletion operations.
+}
+
+CONSTITUENT
+how to formulate the syncretism thing in terms of constituent containment
+
+For light heads and relative pronouns this means that one of them can be absent when they form a constituent within the other element. Throughout this chapter I elaborate further on the exact requirements for constituent containment.\footnote{
+There are namely two types of containment possible. The first one is structural constituent containment: an element can be absent if it structurally forms a constituent within the other element. I elaborate on this in Section \ref{sec:basic-matching}. The second one is formal containment: an element can be absent if its form is syncretic with a constituent within the other element. I elaborate on this in Section \ref{sec:basic-unrestricted}.}
 In other words, it depends on the comparison between the light head and the relative pronoun which one of them is absent. Specifically, it depends on the comparison of the constituents that the two elements consist of. Note that it is also possible that neither of the elements form a constituent within the other one. The consequence is then that neither of them is deleted, which describes the situation in which there is no grammatical headless relative.
 
+I continue with my third assumption.
 In order to be able to compare the light head and the relative pronoun, I zoom in on their syntactic structures. In Chapter \ref{ch:deriving-onlyinternal} to \ref{ch:discussing-unrestricted} I give arguments to support the structures I am assuming here. Figure \ref{fig:rel-lh-intonly} gives a simplified representation of them.
 
 \begin{figure}[htbp]
@@ -108,10 +116,7 @@ In order to be able to compare the light head and the relative pronoun, I zoom i
 
 I assume that the light head and the relative pronoun partly contain the same syntactic features. The features they have in common are case features (\tsc{k}) and what I here simplify as phi-features (ϕ). The light head and the relative pronoun differ from each other in that the relative pronoun has at least one feature in addition, which I call here \tsc{rel}.
 
-This system excludes the external-only type. An external-only type would be one in which the relative pronoun can be deleted, but the light head cannot be deleted. In my proposal, an element can be deleted if forms a constituent within the other element. Relative pronouns always contain one more feature than light heads: \tsc{rel}. From that it follows that the light head does not contain all features that the relative pronoun contains. Therefore, it is impossible for a relative pronoun to form a constituent within the light head.%too strong, effect of syncretism
-%this syncretism means that the other way around also always works
-
-My last assumption makes crucial use of Nanosyntax. I assume that the only way in which languages differ is in their lexicon: different languages contain different lexical entries. In Nanosyntax, lexical entries have the form of constitutions, as those are the only objects that can be spelled out. This means that languages differ in how they organize their features into constituents. This has consequences for the deletion of light heads and relative pronouns, since they need to be contained in the other the be deleted. For light heads and relative pronouns the crucial difference is whether phi-features are case features are each spelled out by their own lexical entry or whether they form a portmanteau.
+My last assumption makes crucial use of Nanosyntax. I assume that the only way in which languages differ is in their lexicon: different languages contain different lexical entries. In Nanosyntax, lexical entries have the form of constitutions, as those are the only objects that can be spelled out. This means that languages differ in how they organize their features into constituents. This has consequences for the deletion of light heads and relative pronouns, since they need to be contained in the other the be deleted. For light heads and relative pronouns the crucial difference is whether phi-features are case features are each spelled out by their own lexical entry or whether they form a portmanteau and whether the light head and the relative pronoun are syncretic.
 
 Summing up this section, I make four assumptions. My first assumption is that headless relative clauses are derived from light-headed relatives. Light-headed relatives contain a light head and relative pronoun. In a headless relative either the light head or the relative pronoun is deleted.
 My second assumption is that the necessary requirement for deletion is that the deleted element (either the light head or relative pronoun) forms a constituent within the other element. My third assumption is that light heads and relative pronouns contain the same features, and that the relative pronoun contains one additional feature: \tsc{rel}. My last assumption is that the only way in which languages differ is in their lexicon, which contains different constituents with features that correspond to phonology.
@@ -123,7 +128,7 @@ In this I show how different types of constituency leads to different patterns i
 
 For each of the three languages types, I first give the constituency within light heads and relative pronouns. Then I compare the constituents of the two elements when they appear in different cases, which is (i) when the cases on the light head and the relative pronoun match, (ii) when the relative pronoun bears the more complex case, and (iii) when the light head bears the more complex case. I show for each of the language types that the correct results are derived in the different situations.
 
-\subsection{The internal-only type}
+\subsection{The internal-only type}\label{sec:basic-internal}
 
 I start with the internal-only type of language. In this type of language, the constituency is as shown in Figure \ref{fig:rel-lh-intonly-1}.
 
@@ -347,7 +352,7 @@ These comparisons correctly the derive the observed patterns in internal-only la
 Headless relatives in internal-only languages are grammatical when the internal and the external case match and when the internal case is more complex than the external case. In these situations, the light head forms a constituent within the relative pronoun, and the light head is deleted. Headless relatives are ungrammatical when the external case is more complex than the internal case, because then the light head no longer forms a constituent within the relative pronoun.
 
 
-\subsection{The matching type}
+\subsection{The matching type}\label{sec:basic-matching}
 
 I continue with the matching type of language. In this type of language, the constituency is as shown in Figure \ref{fig:rel-lh-matching}.
 
@@ -780,7 +785,7 @@ In matching languages, headless relatives are only grammatical when the internal
 
 
 
-\subsection{The unrestricted type}
+\subsection{The unrestricted type}\label{sec:basic-unrestricted}
 
 I end with the unrestricted type of language. In this type of language, the constituency is the same as in the internal-only type of language as shown in Figure \ref{fig:rel-lh-intonly-2}.
 
@@ -822,7 +827,12 @@ The \tsc{k}P is spelled out a whole, including the ϕP. The \tsc{rel}P has its o
 
 so for the first two, see up there
 
-The difference between the internal-only type and the unrestricted type lies in when the external case is more complex than the internal case. In the internal-only type this is ungrammatical, and in the unrestricted type, it is grammatical. This means that the light head can delete the relative pronoun when its case is more complex. This is because of a syncretism.
+The difference between the internal-only type and the unrestricted type lies in when the external case is more complex than the internal case. In the internal-only type this is ungrammatical, and in the unrestricted type, it is grammatical. This means that the light head can delete the relative pronoun when its case is more complex.
+
+Two types of constituent containment:
+structural containment = you contain a constituent that contains the features
+formal containment = you contain a constituent that corresponds to the same form
+
 
 \footnote{
 Another option is that the relative pronoun does not actually form a constituent within the light head. Instead, the relative features form a separate constituent which is not deleted. In this chapter I only discuss the situation in which the relative pronoun as a whole forms a constituent within the light head, and the relative pronoun is deleted as a whole. I return to the deletion of separate constituents in Chapter \ref{ch:discussing-unrestricted}.
@@ -830,10 +840,6 @@ Another option is that the relative pronoun does not actually form a constituent
 give a tree here that illustrates it
 
 }
-
-(2) cyclicity
-
-
 
 I suggest that there is a syncretism between the phi-features and the phi-features plus the relative features. That is, there is a lexical entry for the \tsc{rel}P which contains the feature \tsc{rel} and feature ϕ, but not a more specific one that spells out ϕ on its own. In \ref{ex:entry-alpha}, I give the lexical entry, which spells out as /α/.
 
@@ -855,10 +861,44 @@ I suggest that there is a syncretism between the phi-features and the phi-featur
 
 
 
+Cyclicity
+For the unrestricted type of language I need to make explicit an additional assumption which concerns the larger syntactic structure of headless relatives. I assume that the relative clause is built first, which includes the relative pronoun and its case.
+At a later stage in the derivation, the light head is built. The last features of the light head that are merged are the case features. This means that there is a stage in which the relative pronoun does not bear any case features yet, like this:
 
+\begin{figure}[htbp]
+  \center
+  \begin{tabular}[b]{ccc}
+      \toprule
+      light head & & relative pronoun \\
+      \cmidrule(lr){1-1} \cmidrule(lr){3-3}
+      \begin{forest} boom
+            [\tsc{nom}P
+                [\tsc{f}1]
+                [ϕP
+                    [\phantom{xxx}, roof, baseline]
+                ]
+            ]
+        ]
+      \end{forest}
+      & \phantom{x} &
+      \begin{forest} boom
+        [\tsc{rel}P
+            [\tsc{rel}P
+                [\phantom{xxx}, roof, baseline]
+            ]
+            [ϕP
+                [\phantom{xxx}, roof, baseline]
+            ]
+            ]
+        ]
+      \end{forest}\\
+      \bottomrule
+  \end{tabular}
+   \caption {\tsc{ext}\scsub{nom} vs. \tsc{int}\scsub{nom} in the unrestricted type}
+  \label{fig:nom-nom-unres}
+\end{figure}
 
-
-so there is a stage in the derivation in which the light head is nominative and so is the relative pronoun
+then the F1 is merged
 
 \begin{figure}[htbp]
   \center
@@ -913,8 +953,65 @@ so there is a stage in the derivation in which the light head is nominative and 
       \bottomrule
   \end{tabular}
    \caption {\tsc{ext}\scsub{nom} vs. \tsc{int}\scsub{nom} in the unrestricted type}
-  \label{fig:acc-nom-intonly}
+  \label{fig:nom-nom-unres}
 \end{figure}
+
+so there is a point in the derivation in which the rp and the lh are syncretic and at this point the rp is deleted
+
+then the F2 is merged
+
+\begin{figure}[htbp]
+  \center
+  \begin{tabular}[b]{ccc}
+      \toprule
+      light head & & relative pronoun \\
+      \cmidrule(lr){1-1} \cmidrule(lr){3-3}
+      \begin{forest} boom
+        [\tsc{acc}P
+            [\tsc{f2}]
+            [\tsc{nom}P,
+            tikz={
+            \node[draw,circle,
+            dashed,
+            scale=0.8,
+            fit to=tree]{};
+            }
+                [\tsc{f}1]
+                [ϕP
+                    [\phantom{xxx}, roof, baseline]
+                ]
+            ]
+        ]
+      \end{forest}
+      & \phantom{x} &
+      \begin{forest} boom
+        [\tsc{rel}P,
+        tikz={
+        \node[draw,circle,
+        dashed,
+        scale=0.85,
+        fill=DG,fill opacity=0.2,
+        fit to=tree]{};
+        }
+            [\tsc{rel}P
+                [\phantom{xxx}, roof, baseline]
+            ]
+            [\tsc{nom}P
+                [\tsc{f}1]
+                [ϕP
+                    [\phantom{xxx}, roof, baseline]
+                ]
+            ]
+        ]
+      \end{forest}\\
+      \bottomrule
+  \end{tabular}
+   \caption {\tsc{ext}\scsub{nom} vs. \tsc{int}\scsub{nom} in the unrestricted type}
+  \label{fig:acc-nom-unres}
+\end{figure}
+
+
+so there is a stage in the derivation in which the light head is nominative and so is the relative pronoun
 
 
 
@@ -1032,12 +1129,20 @@ This means that a less complex case can delete a more complex case when there is
 
 
 
-The comparisons between the constituents within the light heads and the relative pronouns correctly derive the patterns observed in the unrestricted type of language.
-In unrestricted languages, all types of headless relatives are grammatical: when the internal and the external case match, when the internal case is more complex and when the external case is more complex. I summarize this in \ref{tbl:overview-rel-light-ohg}.
+
+
+
+
+
+
+
+
+
+The comparisons between the constituents within the light heads and the relative pronouns correctly derive the patterns observed in the unrestricted type of language. An overview of the patterns is shown in Table \ref{tbl:overview-rel-light-ohg}.
 
 \begin{table}[htbp]
   \center
-  \caption{Grammaticality in the matching type}
+  \caption{Grammaticality in the unrestricted type}
 \begin{tabular}{cc}
   \toprule
                                         & surface pronoun             \\
@@ -1050,9 +1155,7 @@ In unrestricted languages, all types of headless relatives are grammatical: when
 \label{tbl:overview-rel-light-ohg}
 \end{table}
 
-
-
-
+In unrestricted languages, all types of headless relatives are grammatical: when the internal and the external case match, when the internal case is more complex and when the external case is more complex. This follows from the fact that in unrestricted languages ϕP and \tsc{k}P correspond to a single morpheme and from the fact that light heads and relative clauses (in the same case) are syncretic. As a result, the light head forms a constituent within the relative pronoun when the internal and the external case match and when the internal case is more complex, and the light head is deleted. Additionally, when the external case is more complex than the internal case, the relative pronoun is syncretic with a constituent within the light head at some point in the derivation, at which the relative pronoun is deleted.
 
 
 
@@ -1066,8 +1169,10 @@ If the relative pronoun is syncretic with a constituent within the light head, t
 
 In other words, the grammaticality of a headless relative depends on constituent comparison. The constituents that are compared are those of the light head and the relative pronoun, which both bear their own case. Case is special in that it can differ from sentence to sentence within a language. Therefore, the grammaticality of a sentence can differ within a language depending on the internal and external case. The part of the light head and relative pronoun that does not involve case features is stable within a language. Therefore, whether the internal or external case is `allowed to surface' does not differ within a language.
 
+This system excludes the external-only type. An external-only type would be one in which the relative pronoun can be deleted, but the light head cannot be deleted. In my proposal, an element can be deleted if forms (or is syncretic with) a constituent within the other element. Relative pronouns always contain one more feature than light heads: \tsc{rel}. From that it follows that the light head does not contain all features that the relative pronoun contains. Therefore, it is impossible for a relative pronoun to be syncretic with a constituent within the light head without the light head being syncretic with a constituent within the relative pronoun.
+
 In this dissertation I describe different language types in case competition in headless relatives. In my account, the different language types are a result of a comparison of the light head and the relative pronoun in the language.
-The larger syntactic context in which this takes place should be kept stable. The operation that deletes the light head or the relative pronoun is the same for all language types. In this work, I do not specify on which larger syntactic structure and which deletion operation should be used. In Chapter \ref{ch:larger-syntax} I discuss existing proposals on these topics and to what extend they are compatible with my account.
+The larger syntactic context in which this takes place should be kept stable. The operation that deletes the light head or the relative pronoun is the same for all language types. In this work, I do not specify on which larger syntactic structure and which deletion operation should be used. In Chapter \ref{ch:discussion} I discuss existing proposals on these topics and to what extend they are compatible with my account.
 
 To conclude, in this chapter I introduced the assumptions that headless relatives are derived from light-headed relatives and that relative pronouns contain at least one more feature than light heads. A headless relative is grammatical when either the light head or the relative pronoun forms a constituent within the other element. This set of assumptions derives that only the most complex case can surface and that there is no language of the external-only type.
 
